@@ -1,5 +1,5 @@
 ﻿/*
- * Copyright (c) Contributors, http://opensimulator.org/
+ * Copyright (c) Contributors, http://opensimulator.org/, http://whitecore-sim.org
  * See CONTRIBUTORS.TXT for a full list of copyright holders.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -29,11 +29,9 @@ using WhiteCore.Framework.Physics;
 using WhiteCore.Framework.Utilities;
 using System;
 using System.Collections.Generic;
-using System.Linq;
-using System.Text;
 using OMV = OpenMetaverse;
 
-namespace OpenSim.Region.Physics.BulletSPlugin
+namespace WhiteCore.Region.Physics.BulletSPlugin
 {
     public class BSActorAvatarMove : BSActor
     {
