@@ -1,5 +1,5 @@
 /*
- * Copyright (c) Contributors, http://opensimulator.org/
+ * Copyright (c) Contributors, http://opensimulator.org/, http://whitecore-sim.org
  * See CONTRIBUTORS.TXT for a full list of copyright holders.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -25,13 +25,11 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 using System;
-using System.Collections.Generic;
 using System.Runtime.InteropServices;
-using System.Security;
 using System.Text;
 using OpenMetaverse;
 
-namespace OpenSim.Region.Physics.BulletSPlugin {
+namespace WhiteCore.Region.Physics.BulletSPlugin {
 
     // Constraint type values as defined by Bullet
 public enum ConstraintType : int
@@ -50,9 +48,11 @@ public enum ConstraintType : int
 [StructLayout(LayoutKind.Sequential)]
 public struct ConvexHull
 {
+		/* not currently used??
 	Vector3 Offset;
 	int VertexCount;
 	Vector3[] Vertices;
+	*/
 }
 public enum BSPhysicsShapeType
 {
