@@ -1,5 +1,5 @@
 ﻿/*
- * Copyright (c) Contributors, http://opensimulator.org/
+ * Copyright (c) Contributors, http://opensimulator.org/, http://whitecore-sim.org
  * See CONTRIBUTORS.TXT for a full list of copyright holders.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -26,17 +26,13 @@
  */
 
 using System;
-using System.Reflection;
-using System.Collections.Generic;
-using System.Xml;
 using OMV = OpenMetaverse;
-using OpenSim.Region.Physics.ConvexDecompositionDotNet;
 using WhiteCore.Framework.SceneInfo;
 using WhiteCore.Framework.Physics;
 using WhiteCore.Framework.Utilities;
 using WhiteCore.Framework.ConsoleFramework;
 
-namespace OpenSim.Region.Physics.BulletSPlugin
+namespace WhiteCore.Region.Physics.BulletSPlugin
 {
 
     [Serializable]
