@@ -26,7 +26,6 @@
  */
 using System;
 using System.Collections.Generic;
-using System.Text;
 using OMV = OpenMetaverse;
 using OpenSim.Region.Physics.ConvexDecompositionDotNet;
 using WhiteCore.Framework.Physics;
@@ -34,7 +33,7 @@ using WhiteCore.Framework.SceneInfo;
 using WhiteCore.Framework.Services.ClassHelpers.Assets;
 using WhiteCore.Framework.Utilities;
 
-namespace OpenSim.Region.Physics.BulletSPlugin
+namespace WhiteCore.Region.Physics.BulletSPlugin
 {
 public sealed class BSShapeCollection : IDisposable
 {
